# SMiLe

./: .gitignore  LICENSE  README.md
HE-MAN/: benchmark-concrete-inference.py  benchmark-tenseal-inference.py  lenet-5.ipynb  mnist_result_comparison.ipynb
MNIST/: save_as_png.ipynb
ONNX/: conv_domain_check.ipynb  conv_precision_test.ipynb
OpenFHE/: .gitignore  CMakeLists.txt  README.md
OpenFHE/apps/: fix_output.cpp  keygen.cpp  main.cpp
OpenFHE/img/: 0-1.csv  0-5.csv  1-1.csv  1-11.csv  1-12.csv  1-13.csv  1-14.csv  1-6.csv  1-8.csv  1-9.csv  2-1.csv  2-2.csv  2-3.csv  2-4.csv  2-6.csv  3-1.csv  3-10.csv  3-2.csv  3-6.csv  3-7.csv  4-1.csv  4-10.csv  4-4.csv  4-6.csv  4-7.csv  4-8.csv  5-1.csv  5-3.csv  5-4.csv  5-5.csv  6-2.csv  6-4.csv  6-6.csv  6-7.csv  7-14.csv  7-2.csv  7-7.csv  7-8.csv  9-11.csv  9-3.csv  (+3 more)
OpenFHE/include/: LoadImage.h  LoadModel.h
OpenFHE/measurements/: 1-data.json  3-data.json  4-data.json  5-data.json  8-data.json
OpenFHE/model/: _Gemm_3_bias.csv  _Gemm_5_bias.csv
OpenFHE/openfhe-mnist-test/: Readme.md
OpenFHE/openfhe-mnist-test/apps/: encrypt.cpp  eval_mnist.cpp  test.cpp
OpenFHE/openfhe-mnist-test/img/: 0-2.csv  0-3.csv  0-4.csv  0-6.csv  0-7.csv  0-8.csv  1-10.csv  1-2.csv  1-3.csv  1-4.csv  1-5.csv  1-7.csv  2-5.csv  2-7.csv  2-8.csv  3-11.csv  3-3.csv  3-4.csv  3-5.csv  3-8.csv  3-9.csv  4-11.csv  4-12.csv  4-13.csv  4-14.csv  4-2.csv  4-3.csv  4-5.csv  4-9.csv  5-2.csv  5-6.csv  5-7.csv  6-1.csv  6-10.csv  6-3.csv  6-5.csv  6-8.csv  6-9.csv  7-1.csv  7-10.csv  (+17 more)
OpenFHE/openfhe-mnist-test/include/: Deserialize.h  KeyGen.h  LinTools.h  random_double.h
OpenFHE/openfhe-mnist-test/measurements/: 0-data.json  2-data.json  6-data.json  7-data.json  9-data.json
OpenFHE/openfhe-mnist-test/model/: _Conv_0_bias.csv  _Conv_0_weights.csv  _Gemm_3_w.csv  _Gemm_5_w.csv
OpenFHE/openfhe-mnist-test/python/: evalMnist.py  plotTimings.py  viewImage.py
OpenFHE/openfhe-mnist-test/src/: CMakeLists.txt  Deserialize.cpp  KeyGen.cpp  LinTools.cpp  LoadImage.cpp
OpenFHE/python/: convert_to_CSV.py  getMatrices.py  getModel.py  loadMnist.py
OpenFHE/src/: LoadModel.cpp  random_double.cpp
ReLU_approximation/: relu_approximation.ipynb
TenSEAL/: TenSEAL_LinReg.ipynb  TenSEAL_MNIST.ipynb  (+4 more)
(+2222 files in other folders)
